--- a/app/views/modal/_ask.haml
+++ b/app/views/modal/_ask.haml
@@ -9,7 +9,7 @@
       .modal-body
         .form-group.has-feedback
           %textarea.form-control{ name: "qb-all-question", placeholder: t(".placeholder"), data: { "character-count-target": "input" } }
-          %p.text-right.text-muted.form-control-feedback{ data: { "character-count-target": "counter" } } 0 / 512
+          %p.text-right.text-muted.form-control-feedback{ data: { "character-count-target": "counter" } } 512
       .modal-footer
         %button.btn.btn-default{ type: :button, data: { dismiss: :modal } }= t("voc.cancel")
         %button.btn.btn-primary{ name: "qb-all-ask", type: :button, data: { "character-count-target": "action", loading_text: t(".loading") } }= t(".action")
