--- a/app/views/application/_questionbox.haml
+++ b/app/views/application/_questionbox.haml
@@ -18,7 +18,7 @@
       - if user_signed_in? || user.privacy_allow_anonymous_questions?
         #question-box{ data: { controller: "character-count", "character-count-max-value": 512 }}
           %textarea.form-control{ name: "qb-question", placeholder: t(".placeholder"), data: { "character-count-target": "input" } }
-          .row{ style: "padding-top: 5px; padding-left: 5px; padding-right: 5px;" }
+          .row{ style: "padding-top: 5px;" }
             .col-6
               - if user_signed_in?
                 - if user.privacy_allow_anonymous_questions?
@@ -30,7 +30,7 @@
                   %input{ name: "qb-anonymous", type: :hidden, value: false }/
             .col-6
               %p.pull-right
-                %span.text-muted{ data: { "character-count-target": "counter" } } 0 / 512
+                %span.text-muted.mr-1{ data: { "character-count-target": "counter" } } 512
                 %input{ name: "qb-to", type: "hidden", value: user.id }/
                 %button.btn.btn-primary{ name: "qb-ask",
                   type: :button,
