Add top action bar to Inbox

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -79,6 +79,7 @@
 "components/entry",
 "components/flags",
 "components/icons",
+"components/inbox-actions",
 "components/inbox-entry",
 "components/jumbotron",
 "components/locales",
