--- a/app/views/layouts/inbox.haml
+++ b/app/views/layouts/inbox.haml
@@ -1,8 +1,7 @@
 .container-lg.container--main
   .row
-    .col-md-3.col-xs-12.col-sm-4.order-2.order-sm-1
-      = render 'inbox/sidebar', delete_id: @delete_id, disabled: @disabled, inbox_count: @inbox_count
-    .col-md-9.col-xs-12.col-sm-8.order-1.order-sm-2
+    .col-sm-10.col-md-10.col-lg-9.mx-auto
+      = render 'inbox/actions', delete_id: @delete_id, disabled: @disabled, inbox_count: @inbox_count
       = render 'layouts/messages'
       = yield
 
