Add settings page for push notifications

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -108,6 +108,7 @@
 "components/mobile-nav",
 "components/notifications",
 "components/profile",
+"components/push-settings",
 "components/question",
 "components/smiles",
 "components/themes",
