--- a/app/views/tabs/_settings.html.haml
+++ b/app/views/tabs/_settings.html.haml
@@ -8,6 +8,7 @@
     = list_group_item t(".mutes"), settings_muted_path
     = list_group_item t(".blocks"), settings_blocks_path
     = list_group_item t(".theme"), edit_settings_theme_path
+    = list_group_item t(".push_notifications"), settings_push_notifications_path
     = list_group_item t(".data"), settings_data_path
     = list_group_item t(".export"), settings_export_path
 
