Improve UX for push subscription management

--- a/app/views/settings/_push_notifications.haml
+++ b/app/views/settings/_push_notifications.haml
@@ -1,7 +1,7 @@
 .card.push-notifications-settings
   .card-body
     %p= t('.description')
-    %p= t('.subscription_count', count: subscriptions.count)
+    %p#subscription-count= t('.subscription_count', count: subscriptions.count)
 
     .push-notifications-unavailable.text-danger
       %i.fa.fa-warning
@@ -12,6 +12,6 @@
       = t('.current_target')
 
     .button-group{ role: 'group' }
-      %button.btn.btn-primary{ data: { action: 'push-enable' } }= t('.subscribe')
-      %button.btn.btn-primary{ data: { action: 'push-disable' } }= t('.unsubscribe_current')
-      %button.btn.btn-danger{ data: { action: 'push-remove-all' } }= t('.unsubscribe_all')
+      %button.btn.btn-primary{ data: { action: 'push-enable' }, class: 'd-none' }= t('.subscribe')
+      %button.btn.btn-primary{ data: { action: 'push-disable' }, class: 'd-none' }= t('.unsubscribe_current')
+      %button.btn.btn-danger{ data: { action: 'push-remove-all' }, class: subscriptions.empty? ? 'd-none' : '' }= t('.unsubscribe_all')
