--- a/app/views/inbox/_actions.haml
+++ b/app/views/inbox/_actions.haml
@@ -8,7 +8,7 @@
         %button.btn.btn-info.mr-auto{ type: :button, id: "ib-generate-question" }
           = t(".questions.button")
         .button-group.ml-1
-          %button.btn.btn-default{ data: { toggle: :dropdown }, aria: { expanded: false } }
+          %button.btn.btn-default{ title: t(".share.heading"), data: { toggle: :dropdown }, aria: { expanded: false } }
             %i.fa.fa-fw.fa-share-alt
             %span.sr-only= t(".share.heading")
           .dropdown-menu.dropdown-menu-right{ role: :menu }
@@ -18,6 +18,6 @@
             %a.dropdown-item{ href: "https://www.tumblr.com/share/link?url=#{user_url(current_user)}&name=Ask%20me%20anything%21", target: "_blank" }
               %i.fa.fa-fw.fa-tumblr
               = t(".share.button", service: "Tumblr")
-        %button.btn.btn-danger.ml-1{ type: :button, id: delete_id, disabled: (disabled ? :disabled : nil), data: { ib_count: inbox_count } }
+        %button.btn.btn-danger.ml-1{ type: :button, title: t(".actions.delete"), id: delete_id, disabled: (disabled ? :disabled : nil), data: { ib_count: inbox_count } }
           %i.fa.fa-fw.fa-trash-o
           %span.sr-only= t(".actions.delete")
