allow for using SVG logos in the navbar
this uses our ✨new and improved✨ logo by default, but can be easily
changed by modifying `/public/logo.svg`.  the svg is loaded only once
when the application starts, so any modifications to it after a
deployment are visible immediately.

thanks to the power of CSS and SVG being able to make use of it, custom
colour schemes still work too.

--- a/app/javascript/styles/overrides/_navbar.scss
+++ b/app/javascript/styles/overrides/_navbar.scss
@@ -6,6 +6,14 @@
     &:focus {
       color: RGB(var(--primary-text));
     }
+
+    /* svg-logo! \o/ */
+    svg {
+      height: $navbar-brand-font-size;
+      path {
+        fill: RGB(var(--primary-text));
+      }
+    }
   }
 
   .navbar-nav {
