--- a/app/views/navigation/_desktop.haml
+++ b/app/views/navigation/_desktop.haml
@@ -1,7 +1,10 @@
 %nav.navbar.navbar-themed.navbar-expand-lg.bg-primary.fixed-top.d-lg-block.d-none.d-print-none{ role: :navigation }
   .container{ class: ios_web_app? ? 'ios-web-app' : '' }
-    %a.navbar-brand{ href: '/' }
-      = APP_CONFIG['site_name']
+    %a.navbar-brand{ href: '/', title: APP_CONFIG["site_name"] }
+      - if APP_CONFIG["use_svg_logo"]
+        = render inline: Rails.application.config.justask_svg_logo
+      - else
+        = APP_CONFIG["site_name"]
     %ul.nav.navbar-nav.mr-auto
       = nav_entry t("navigation.timeline"), root_path, icon: 'home'
       = nav_entry t("navigation.inbox"), '/inbox', icon: 'inbox', badge: inbox_count
