make the shared links visible everywhere again

--- a/app/views/layouts/feed.haml
+++ b/app/views/layouts/feed.haml
@@ -4,4 +4,5 @@
       = render 'layouts/messages'
       = render 'tabs/feed', lists: @lists, list: @list
       = yield
-  .d-block.d-sm-none= render 'shared/links'
+
+= render 'shared/links'
