--- a/app/views/layouts/user/profile.haml
+++ b/app/views/layouts/user/profile.haml
@@ -15,3 +15,5 @@
   - if current_user.mod? && @user != current_user
     = render 'modal/privileges', user: @user
     = render 'modal/ban', user: @user
+
+.d-block.d-sm-none= render 'shared/links'
