Center-align load more buttons on single column pages

--- a/app/views/inbox/show.html.haml
+++ b/app/views/inbox/show.html.haml
@@ -6,6 +6,6 @@
     = t(".empty")
 
 - if @more_data_available
-  .d-flex.justify-content-center.justify-content-sm-start#paginator
+  .d-flex.justify-content-center#paginator
     = button_to inbox_path(last_id: @inbox_last_id), class: "btn btn-light" do
       = t("voc.load")
