Use Lexend 300 as 400

--- a/app/javascript/styles/_variables.scss
+++ b/app/javascript/styles/_variables.scss
@@ -1,6 +1,6 @@
 // Font settings
 $lexend-font-path: "~@fontsource/lexend/files";
-$lexend-weights:   400, 500, 600;
+$lexend-weights:   500, 600;
 $fa-font-path:     "~font-awesome/fonts";
 
 $font-family-sans-serif:  "Lexend", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
