--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -32,6 +32,19 @@
   );
 }
 
+// Using Lexend Light (300) as Regular (400) as Regular is quite thick.
+@each $subset, $unicodeRangeValues in Lexend.$unicodeMap {
+  @font-face {
+    font-family: Lexend;
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src: url("#{Lexend.$fontDir}/lexend-#{$subset}-300-normal.woff2") format("woff2"),
+    url("#{Lexend.$fontDir}/lexend-all-300-normal.woff") format("woff");
+    unicode-range: $unicodeRangeValues;
+  }
+}
+
 /**
  OVERRIDES
  ----------------------------------------------
