Update Font Awesome to version 6

--- a/app/javascript/styles/_variables.scss
+++ b/app/javascript/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Font settings
 $lexend-font-path: "~@fontsource/lexend/files";
 $lexend-weights:   500, 600;
-$fa-font-path:     "~font-awesome/fonts";
+$fa-font-path:     "~fontawesome-free/webfonts";
 
 $font-family-sans-serif:  "Lexend", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:       Georgia, "DejaVu Serif", "Times New Roman", Times, serif;
