--- a/app/views/application/_questionbox.html.haml
+++ b/app/views/application/_questionbox.html.haml
@@ -14,6 +14,9 @@
     - elsif user_signed_in? && user.blocking?(current_user)
       .text-center
         %strong= t(".status.blocked")
+    - elsif user.inbox_locked?
+      .text-center
+        %strong= t(".status.locked")
     - else
       - if user_signed_in? || user.privacy_allow_anonymous_questions?
         #question-box{ data: { controller: "character-count", "character-count-max-value": 512 }}
