--- a/app/views/settings/privacy/edit.html.haml
+++ b/app/views/settings/privacy/edit.html.haml
@@ -2,6 +2,7 @@
   .card-body
     = bootstrap_form_for(current_user, url: settings_privacy_path, method: :patch, data: { turbo: false }) do |f|
       = f.check_box :privacy_allow_anonymous_questions
+      = f.check_box :privacy_require_user
       = f.check_box :privacy_allow_public_timeline
       = f.check_box :privacy_allow_stranger_answers
 
