--- a/app/views/navigation/dropdown/_profile.html.haml
+++ b/app/views/navigation/dropdown/_profile.html.haml
@@ -31,7 +31,7 @@
         %i.fa.fa-toggle-off
         = t(".unmask.enable")
     %a.dropdown-item{ href: mod_anon_block_index_path }
-      %i.fa.fa-fw.fa-volume-off
+      %i.fas.fa-fw.fa-user-slash
       = t(".site_wide_blocks")
     %a.dropdown-item{ href: moderation_reports_path }
       %i.fa.fa-fw.fa-gavel
