--- a/app/views/answerbox/_header.html.haml
+++ b/app/views/answerbox/_header.html.haml
@@ -12,7 +12,7 @@
             = render "actions/question", question: a.question
       %h6.text-muted.media-heading.answerbox__question-user
         - if a.question.author_is_anonymous
-          %i.fa.fa-user-secret{ title: t(".anon_hint") }
+          %i.fas.fa-mask{ title: t(".anon_hint") }
         = t(".asked_html", user: user_screen_name(a.question.user, context_user: a.user, author_identifier: a.question.author_is_anonymous ? a.question.author_identifier: nil), time: time_tooltip(a.question))
         - if !a.question.author_is_anonymous && !a.question.direct
           ·
