--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -7,7 +7,7 @@
       .media-body
         %h6.text-muted.media-heading.answerbox__question-user
           - if i.question.author_is_anonymous
-            %i.fa.fa-user-secret{ title: t('.anon_hint') }
+            %i.fas.fa-mask{ title: t('.anon_hint') }
           = t(".asked_html", user: user_screen_name(i.question.user, context_user: i.user, author_identifier: i.question.author_is_anonymous ? i.question.author_identifier : nil), time: time_tooltip(i.question))
           - if !i.question.author_is_anonymous && i.question.answer_count.positive?
             ·
