Make input placeholder themable

--- a/app/javascript/styles/_variables.scss
+++ b/app/javascript/styles/_variables.scss
@@ -97,6 +97,7 @@ $spacers: (
   --body-text: 0, 0, 0;
   --muted-text: 108, 117, 125;
   --input-text: 0, 0, 0;
+  --input-placeholder: 108, 117, 125;
 
   --turbolinks-progress-color: #a58adc; // --primary lightened by 25%
 }
