--- a/app/views/settings/privacy/edit.html.haml
+++ b/app/views/settings/privacy/edit.html.haml
@@ -6,6 +6,7 @@
       = f.check_box :privacy_require_user
       = f.check_box :privacy_allow_public_timeline
       = f.check_box :privacy_allow_stranger_answers
+      = f.check_box :privacy_noindex
 
       = f.primary
 
