Hide empty text as soon as another inbox entry appears

--- a/app/views/inbox/show.html.haml
+++ b/app/views/inbox/show.html.haml
@@ -3,7 +3,7 @@
     = render "inbox/entry", i: i
 
   - if @inbox.empty?
-    = t(".empty")
+    %p.empty= t(".empty")
 
 - if @more_data_available
   .d-flex.justify-content-center#paginator
