Use moderation layout on specific views

--- a/app/views/moderation/anonymous_block/index.html.haml
+++ b/app/views/moderation/anonymous_block/index.html.haml
@@ -1,10 +1,10 @@
-- provide(:title, generate_title(t(".title")))
+.card
+  .card-body
+    #entries
+      - if @anonymous_blocks.empty?
+        .text-center= t(".empty")
+      - @anonymous_blocks.each do |block|
+        = render "shared/anonymous_block", block:
 
-.container-lg.container--main
-  .card
-    .card-body
-      #entries
-        - if @anonymous_blocks.empty?
-          .text-center= t(".empty")
-        - @anonymous_blocks.each do |block|
-          = render "shared/anonymous_block", block:
+- provide(:title, generate_title(t(".title")))
+- parent_layout "moderation"
