--- a/app/views/admin/announcement/new.html.haml
+++ b/app/views/admin/announcement/new.html.haml
@@ -1,6 +1,6 @@
 .card
   .card-body
-    = bootstrap_form_for(@announcement, url: { action: "create" }) do |f|
+    = bootstrap_form_for(@announcement, url: { action: "create" }, data: { turbo: false }) do |f|
       .row
         .col-md-12
           = f.text_area :content
