--- a/app/views/shared/_anonymous_block.html.haml
+++ b/app/views/shared/_anonymous_block.html.haml
@@ -1,4 +1,4 @@
-%li.list-group-item
+%li.list-group-item{ id: "block_#{block.id}" }
   .d-flex
     %div
       - if block.question.present?
@@ -7,5 +7,5 @@
         %p.mb-0.text-muted.font-italic= t(".deleted_question")
       %p.text-muted.mb-0= t(".blocked", time: time_ago_in_words(block.created_at))
     .ml-auto.d-inline-flex
-      %button.btn.btn-default.align-self-center{ data: { action: "anon-unblock", target: block.id } }
+      = button_to anonymous_block_path, method: :delete, params: { id: block.id }, class: "btn btn-default align-self-center" do
         %span.pe-none= t("voc.unblock")
