inbox_controller: update all inbox entries when requesting turbo stream
since there's no layout rendered which updates all inbox entries the
inbox entries would still be shown as unread

fixes #827

--- a/app/views/layouts/inbox.html.haml
+++ b/app/views/layouts/inbox.html.haml
@@ -8,6 +8,6 @@
 = render 'shared/links'
 
 :ruby
-  Inbox.where(id: @inbox.ids).update_all(new: false)
+  @inbox.update_all(new: false)
   provide(:title, generate_title('Inbox'))
   parent_layout 'base'
