Add List membership modal as Turbo Frame

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -31,6 +31,7 @@
       = render 'navigation/guest'
     = render 'shared/announcements'
     = yield
+    = turbo_frame_tag :modal_container
     - if Rails.env.development?
       #debug
         %hr
