eager load notification associations for dropdown

--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -1,4 +1,4 @@
-- notifications = Notification.for(current_user).where(new: true).limit(4)
+- notifications = Notification.for(current_user).where(new: true).includes([:target]).limit(4)
 = render 'navigation/desktop', notifications: notifications
 = render 'navigation/mobile', notifications: notifications
 
