--- a/app/views/user/_profile.html.haml
+++ b/app/views/user/_profile.html.haml
@@ -17,12 +17,12 @@
       - if user.following? current_user
         .badge.badge-light
           = t(".badge.follows_you")
-      - if user_signed_in? && current_user.has_role?(:administrator)
-        - if user.has_role?(:administrator)
+      - if user_signed_in? && current_user.has_cached_role?(:administrator)
+        - if user.has_cached_role?(:administrator)
           %span.badge.badge-danger
             %i.fa.fa-fw.fa-flask
             = t(".badge.admin")
-        - if user.has_role?(:moderator)
+        - if user.has_cached_role?(:moderator)
           %span.badge.badge-success
             %i.fa.fa-fw.fa-users
             = t(".badge.moderator")
