--- a/app/javascript/styles/components/_question.scss
+++ b/app/javascript/styles/components/_question.scss
@@ -1,8 +1,12 @@
 .question {
   &--fixed {
-    position: fixed;
+    position: absolute;
     width: 100%;
     z-index: 999;
+
+    @include media-breakpoint-up('sm') {
+      position: fixed;
+    }
   }
 
   &--hidden {
