--- a/app/javascript/styles/elements/_body.scss
+++ b/app/javascript/styles/elements/_body.scss
@@ -7,7 +7,7 @@ body {
     padding-top: $navbar-height;
   }
   @include media-breakpoint-down('md') {
-    padding-bottom: $navbar-height;
+    padding-bottom: calc($navbar-height + unquote('env(safe-area-inset-bottom, 0)'));
   }
 
   &.not-logged-in {
