Localize Sidekiq dashboard panel

--- a/app/views/admin/dashboard/_sidekiq.html.haml
+++ b/app/views/admin/dashboard/_sidekiq.html.haml
@@ -1,26 +1,22 @@
 .card
   .card-header
     %a.d-flex{ href: sidekiq_web_path }
-      %strong Sidekiq
+      %strong= t(".title")
       %i.fa.fa-chevron-right.ml-auto.align-self-center
   - unless @sidekiq[:processes].count.positive?
     .card-body.bg-danger.text-light
-      %strong There are no Sidekiq processes running.
-      Background jobs will not be processed.
-      %br
-      To fix this, run
-      %tt RAILS_ENV=#{Rails.env} bundle exec sidekiq
+      = t(".error_html", env: Rails.env)
 
   .list-group
     .list-group-item.d-flex
-      %span Processes
+      %span= t(".processes")
       %span.ml-auto= @sidekiq[:processes].count
     .list-group-item.d-flex
-      %span Enqueued
+      %span= t(".enqueued")
       %span.ml-auto= @sidekiq[:stats].enqueued
     .list-group-item.d-flex
-      %span Retries
+      %span= t(".retries")
       %span.ml-auto= @sidekiq[:stats].retry_size
     .list-group-item.d-flex
-      %span Dead
+      %span= t(".dead")
       %span.ml-auto= @sidekiq[:stats].dead_size
