--- a/app/views/user/_actions.html.haml
+++ b/app/views/user/_actions.html.haml
@@ -25,6 +25,14 @@
           %a.dropdown-item{ href: '#', data: { action: :block, target: user.screen_name } }
             %i.fa.fa-minus-circle
             %span.pe-none= t("voc.block")
+        - if current_user.muting?(user)
+          %a.dropdown-item{ href: '#', data: { action: :unmute, target: user.screen_name } }
+            %i.fa.fa-volume-off
+            %span.pe-none= t("voc.unmute")
+        - else
+          %a.dropdown-item{ href: '#', data: { action: :mute, target: user.screen_name } }
+            %i.fa.fa-volume-off
+            %span.pe-none= t("voc.mute")
         %a.dropdown-item{ href: '#', data: { action: 'report-user', target: user.screen_name } }
           %i.fa.fa-exclamation-triangle
           = t("voc.report")
