--- a/app/views/settings/mutes/index.html.haml
+++ b/app/views/settings/mutes/index.html.haml
@@ -1,8 +1,18 @@
 .card
   .card-body
-    %h2= t(".heading")
-    %p= t(".body")
-    %p= t(".note")
+    %h2= t(".users.heading")
+    %p= t(".users.body")
+    #users
+      - @users.each do |user|
+        = render "settings/mutes/user", user: user
+      - if @users.empty?
+        %p.text-muted.text-center= t(".users.none")
+
+.card
+  .card-body
+    %h2= t(".terms.heading")
+    %p= t(".terms.body")
+    %p= t(".terms.note")
     #rules
       - @rules.each do |rule|
         = render "settings/mutes/rule", rule: rule
