--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -18,7 +18,7 @@
     %link{ rel: 'icon', href: '/icons/maskable_icon_x192.png', sizes: '192x192' }
     %link{ rel: 'icon', href: '/images/favicon/favicon-32.png', sizes: '32x32' }
     %title= yield(:title)
-    = stylesheet_pack_tag 'application', data: { 'turbo-track': 'reload' }
+    = stylesheet_link_tag 'application', data: { 'turbo-track': 'reload' }
     = javascript_pack_tag 'application', data: { 'turbo-track': 'reload' }
     = javascript_pack_tag 'legacy', data: { 'turbo-track': 'reload' }
     = csrf_meta_tags
