Fix Lexend font path

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -25,7 +25,7 @@
 @each $weight in $lexend-weights {
   @include Lexend.fontFace($weight: $weight,
     $display: fallback,
-    $fontDir: "assets/"
+    $fontDir: "/assets"
   );
 }
 
