Fix asset root paths

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 // Font settings
-$lexend-font-path: "/assets";
+$lexend-font-path: ".";
 $lexend-weights: 500, 600;
-$fa-font-path: "/assets";
+$fa-font-path: ".";
 
 $font-family-sans-serif: "Lexend", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: Georgia, "DejaVu Serif", "Times New Roman", Times, serif;
