--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -25,7 +25,7 @@
 @each $weight in $lexend-weights {
   @include Lexend.fontFace($weight: $weight,
     $display: fallback,
-    $fontDir: "/assets"
+    $fontDir: "."
   );
 }
 
@@ -37,8 +37,8 @@ $unicodeRangeValues in Lexend.$unicodeMap {
     font-style: normal;
     font-display: swap;
     font-weight: 400;
-    src: url("/assets/lexend-#{$subset}-300-normal.woff2") format("woff2"),
-    url("/assets/lexend-all-300-normal.woff") format("woff");
+    src: url("lexend-#{$subset}-300-normal.woff2") format("woff2"),
+    url("lexend-all-300-normal.woff") format("woff");
     unicode-range: $unicodeRangeValues;
   }
 }
