Install Font Awesome 6

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -17,7 +17,11 @@
 @import "@melloware/coloris/dist/coloris",
 "bootstrap/scss/bootstrap",
 "croppr/dist/croppr",
-"font-awesome/scss/font-awesome",
+"@fortawesome/fontawesome-free/scss/fontawesome",
+"@fortawesome/fontawesome-free/scss/solid",
+"@fortawesome/fontawesome-free/scss/regular",
+"@fortawesome/fontawesome-free/scss/brands",
+"@fortawesome/fontawesome-free/scss/v4-shims",
 "sweetalert/dist/sweetalert",
 "toastify-js/src/toastify";
 
