--- a/app/views/actions/_question.html.haml
+++ b/app/views/actions/_question.html.haml
@@ -13,10 +13,10 @@
       = t("voc.block")
     - if current_user.mod?
       = button_to anonymous_block_path, method: :post, params: { question: question.id, global: true }, class: "dropdown-item" do
-        %i.fa.fa-fw.fa-volume-off
+        %i.fas.fa-fw.fa-user-slash
         = t("voc.block_site_wide")
       %a.dropdown-item{ href: moderation_questions_path(author_identifier: question.author_identifier) }
-        %i.fa.fa-fw.fa-user-secret
+        %i.fas.fa-fw.fa-mask
         = t("voc.show_anonymous_questions")
   - if current_user.admin?
     %a.dropdown-item{ href: rails_admin_path_for_resource(question), target: "_blank" }
