--- a/app/views/user/_actions.html.haml
+++ b/app/views/user/_actions.html.haml
@@ -15,40 +15,40 @@
         %span.caret
       .dropdown-menu
         %a.dropdown-item.d-block.d-sm-none{ href: '#', data: { target: '#modal-list-memberships', toggle: :modal } }
-          %i.fa.fa-list
+          %i.fa.fa-list.fa-fw
           = t(".list")
         - if current_user.blocking?(user)
           %a.dropdown-item{ href: '#', data: { action: :unblock, target: user.screen_name } }
-            %i.fa.fa-minus-circle
+            %i.fa.fa-minus-circle.fa-fw
             %span.pe-none= t("voc.unblock")
         - else
           %a.dropdown-item{ href: '#', data: { action: :block, target: user.screen_name } }
-            %i.fa.fa-minus-circle
+            %i.fa.fa-minus-circle.fa-fw
             %span.pe-none= t("voc.block")
         - if current_user.muting?(user)
           %a.dropdown-item{ href: '#', data: { action: :unmute, target: user.screen_name } }
-            %i.fa.fa-volume-off
+            %i.fa.fa-volume-off.fa-fw
             %span.pe-none= t("voc.unmute")
         - else
           %a.dropdown-item{ href: '#', data: { action: :mute, target: user.screen_name } }
-            %i.fa.fa-volume-off
+            %i.fa.fa-volume-off.fa-fw
             %span.pe-none= t("voc.mute")
         %a.dropdown-item{ href: '#', data: { action: 'report-user', target: user.screen_name } }
-          %i.fa.fa-exclamation-triangle
+          %i.fa.fa-exclamation-triangle.fa-fw
           = t("voc.report")
         - if current_user.mod?
           %a.dropdown-item{ href: '#', data: { target: '#modal-privileges', toggle: :modal } }
-            %i.fa.fa-wrench
+            %i.fa.fa-wrench.fa-fw
             = raw t(".privilege", user: user.screen_name)
           - unless user.has_cached_role?(:administrator)
             %a.dropdown-item{ href: '#', data: { target: '#modal-ban', toggle: :modal } }
-              %i.fa.fa-ban
+              %i.fa.fa-ban.fa-fw
               = t(".ban")
         - if current_user.mod? && user != current_user
           %a.dropdown-item{ href: mod_inbox_index_path(user: user.screen_name) }
-            %i.fa.fa-inbox
+            %i.fa.fa-inbox.fa-fw
             = t(".view_inbox")
         - if current_user.has_cached_role? :administrator
           %a.dropdown-item{ href: rails_admin_path_for_resource(user), target: '_blank' }
-            %i.fa.fa-cogs
+            %i.fa.fa-cogs.fa-fw
             = t("voc.view_in_rails_admin")
