--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,8 @@
+@use "sass:map";
+
 .container--main {
-  padding-top: map-get($spacers, 3);
-  padding-bottom: map-get($spacers, 3);
+  padding-top: map.get($spacers, 3);
+  padding-bottom: map.get($spacers, 3);
   // Sass doesn't know about the safe-area-inset-* env vars and throws a syntax error
   // We can get around this by using unquote()
   // Sass also has its own built-in max() function which is not the same as the CSS one
