--- a/app/assets/stylesheets/components/_locales.scss
+++ b/app/assets/stylesheets/components/_locales.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .locales {
   text-align: center;
 
@@ -9,7 +11,7 @@
     ul {
       margin:          0;
       padding:         0;
-      padding-top:     map-get($spacers, 3);
+      padding-top:     map.get($spacers, 3);
       width:           100%;
       list-style:      none;
       display:         inline-flex;
@@ -17,7 +19,7 @@
       flex-wrap:       wrap;
       align-items:     center;
       justify-content: center;
-      
+
       li {
         margin:     0 5px 10px 5px;
         flex:       0 0 auto;
